--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		
 	</style>
 </head>
-<body scroll="no">
+<body>
 	<div class="bg"></div>
 	<h1>段骁桐,1326,前端</h1>
 	<div class="anima">
@@ -21,11 +21,19 @@
 				<div class="top"></div>
 				<div class="down"></div>
 			</div>
-			<div class="bagtxt"><p><b>档</b><b>案</b></p></div>
+			<div class="bagtxt">
+				<p>
+					<b>档</b>
+					<b>案</b>
+				</p>
+			</div>
 		</div>
 	</div>
 	<div class="wrap">
-		
+		<div class="page1 page"></div>
+		<div class="page2 page"></div>
+		<div class="page3 page"></div>
+		<div class="page4 page"></div>
 	</div>
 	<script src="js/index.js"></script>
 </body>
