--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
-		
+	/* .wrap {
+	    margin-left: -550px;
+	    left: 50%;
+	    top: 103px;
+	    position: absolute;
+	    width: 1100px;
+	    height: 599px;
+	    opacity: 1;
+    } */
 	</style>
 </head>
 <body>
@@ -29,11 +37,22 @@
 			</div>
 		</div>
 	</div>
-	<div class="wrap">
-		<div class="page1 page"></div>
-		<div class="page2 page"></div>
-		<div class="page3 page"></div>
-		<div class="page4 page"></div>
+	<div class="wrap overflow">
+	<!-- <div class="wrap"> -->
+		<div class="page0 page" style="z-index: 9">
+			hello world1
+		</div>
+		<div class="page1 page" style="z-index: 8">hello world2</div>
+		<div class="page2 page" style="z-index: 6">hello world3</div>
+		<div class="page3 page" style="z-index: 6">hello world4</div>
+		<nav class="nav">
+			<ul>
+				<li><i></i>个人信息</li>
+				<li><i></i>项目经验</li>
+				<li><i></i>非web相关</li>
+				<li><i></i>下载pdf</li>
+			</ul>
+		</nav>
 	</div>
 	<script src="js/index.js"></script>
 </body>
