--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
-	/* .wrap {
+/* 	.wrap {
 	    margin-left: -550px;
 	    left: 50%;
 	    top: 103px;
@@ -40,11 +40,31 @@
 	<div class="wrap overflow">
 	<!-- <div class="wrap"> -->
 		<div class="page0 page" style="z-index: 9">
-			hello world1
+			<div class="left">
+				<div class="border">
+					<div class="box" id="bb">
+						<canvas id="cas" width="180px" height="180px"></canvas>
+					</div>
+				</div>
+				<div class="info">
+					<h2>简述：</h2><p>
+						从那边来了个lame
+					</p>
+				</div>
+			</div>
+			<div class="right">
+				
+			</div>			
 		</div>
-		<div class="page1 page" style="z-index: 8">hello world2</div>
-		<div class="page2 page" style="z-index: 6">hello world3</div>
-		<div class="page3 page" style="z-index: 6">hello world4</div>
+		<div class="page1 page" style="z-index: 8">
+			开发中
+		</div>
+		<div class="page2 page" style="z-index: 6">
+			开发中
+		</div>
+		<div class="page3 page" style="z-index: 6">
+			开发中
+		</div>
 		<nav class="nav">
 			<ul>
 				<li><i></i>个人信息</li>
@@ -55,5 +75,6 @@
 		</nav>
 	</div>
 	<script src="js/index.js"></script>
+	<script src="js/canvas.js"></script>
 </body>
 </html>
