--- a/index.html
+++ b/index.html
@@ -47,17 +47,45 @@
 					</div>
 				</div>
 				<div class="info">
-					<h2>简述：</h2><p>
-						段骁桐，惯用绰号1326
+					<h2>简述：</h2>
+					<p>
+						段骁桐/1991.12/北京;惯用绰号1326。至今未放弃读万卷书，行万里路的梦想。也曾想尽尝360行，体验不一样的百态，奈何“吾生也有涯，而知也无涯。以有涯随无涯，殆已！”。故扎根前端，化为1年开发经验的前端coder,努力向engineer靠拢中。
 					</p>
+					<p>爱好：看书、<a href="javascript:liketoggle()">玩(不是只有游戏叫玩)=></a></p>
 				</div>
 			</div>
 			<div class="right">
+				<div>
+					<div class="ultit">我的时间<i>捡屎</i>：</div>
+					<ul class="list">
+						<li>
+							<p><i>2010</i>北京理工大学、专科、应用电子技术、最佳进步奖、优秀干部、三好学生</p>
+						</li>
+						<li><p><i>2012</i>中航工业青云仪表有限公司、室主任、优秀班组、6s示范集体</p></li>
+						<li><p><i>2014</i>首都师范大学、成本、汉语言文学、最佳勤奋奖</p></li>
+						<li><p><i>2016</i>HPE、前端工程师、英雄团队</p></li>
+					</ul>
 				
+				</div>
 			</div>			
 		</div>
 		<div class="page1 page" style="z-index: 8">
-			开发中
+			<div class="left">
+				<ul>
+					<li>
+						<h2>国航积分兑换平台</h2>
+						<a href="http://ffp.airchina.com.cn" target="view_window">http://ffp.airchina.com.cn</a>
+						<ul>
+							<li>1</li>
+							<li>2</li>
+						</ul>
+					</li>
+					<li>
+						<h2></h2>
+					</li>
+				</ul>
+			</div>
+			<div class="right">2</div>
 		</div>
 		<div class="page2 page" style="z-index: 6">
 			开发中
