--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<style>
-/* 	.wrap {
+	/* .wrap {
 	    margin-left: -550px;
 	    left: 50%;
 	    top: 103px;
@@ -71,24 +71,121 @@
 		</div>
 		<div class="page1 page" style="z-index: 8">
 			<div class="left">
+				<img src="img/airchina.png" alt="">
+				<h2>国航积分兑换平台</h2>
+				<a href="http://ffp.airchina.com.cn" target="view_window">http://ffp.airchina.com.cn</a>
 				<ul>
-					<li>
-						<h2>国航积分兑换平台</h2>
-						<a href="http://ffp.airchina.com.cn" target="view_window">http://ffp.airchina.com.cn</a>
-						<ul>
-							<li>1</li>
-							<li>2</li>
-						</ul>
-					</li>
-					<li>
-						<h2></h2>
+					<li><b>项目描述：</b>国航积分兑换平台，机票线实现机票购买、兑换、查询；商城线完成pc及移动端的现金+里程支付模式；服务线达成服务电子化里程补登、转增、国际化、callcenter;</li>
+					<li><b>前端技术栈：</b>本项目使用bootstrap/mui+handlebar+ejs+webpack+git/svn进行开发; </li>
+					<li><b>主要职责：</b></li>
+					<li>1.结合需求文档及设计稿高效开发demo； </li>
+					<li>2.解决ie兼容性bug； </li>
+					<li>3.前后端分离方式开发进行数据的展示与交互； </li>
+					<li>4.优化代码，增加可维护性及可读性，缩小页面大小，提示网站速度； </li>
+					<li>5.构建页面各类视觉效果，需前台进行的数据处理，可复用功能封装成插件；</li>
+					<li>6.制作webapp核心模块设计、开发； </li>
+					<li>*期间积累了大量大型网站开发经验，踩了不少坑，所处团队被惠普（国际）评为英雄团队。
 					</li>
 				</ul>
 			</div>
-			<div class="right">2</div>
+			<div class="right">
+				<h2>职业技能:</h2>
+				<ul class="skill">
+					<li>
+						<h3>HTML5</h3>
+						<img id="0" src="img/skill1.png" alt="">
+						<dl>
+							<dd>熟练HTML/XHTML标签语意</dd>
+							<dd>深刻理解web标准</dd>
+							<dd>熟练div+css、熟悉盒模型和各类布局方式</dd>
+							<dd>精通pc、wap页面开发</dd>
+							<dd>掌握新增API(如LocalStorage)</dd>
+							<dd><a href="javascript:WeChat()">微信小程序</a></dd>
+						</dl>
+					</li>
+					<li>
+						<h3>CSS3</h3>
+						<img id="1" src="img/skill2.png" alt="">
+						<dl>
+							<dd>熟练掌握css3新属性及IE浏览器兼容处理</dd>
+							<dd>熟练使用rem单位进行响应式网页开发</dd>
+							<dd>熟悉css3 font-face、font-icon</dd>
+							<dd>了解css预编译器Less及Sass</dd>
+							<dd>使用过Bootstrap、mui、animate等ui框架</dd>
+						</dl>
+					</li>
+					<li>
+						<h3>JavaScript</h3>
+						<img id="2" src="img/skill3.png" alt="">
+						<dl>
+							<dd>熟悉源生javascript编程，以及jquery库类使用</dd>
+							<dd>熟练掌握Ajax交互、了解websocket</dd>
+							<dd>可使用MVVM框架Vue进行SPA开发</dd>
+							<dd>可通过webpack对项目进行打包</dd>
+							<dd><a href="https://git.oschina.net/A1326/sucai"  target="view_window">将常用功能封装成插件，码云上丢着积累的素材</a></dd>
+						</dl>
+					</li>
+					<li>
+						<h3>other</h3>
+						<img id="3" src="img/skill4.png" alt="">
+						<dl>
+							<dd>熟练使用firebug，chrome调试工具调试代码</dd>
+							<dd>了解网页SEO知识</dd>
+							<dd>可针对不同平坦环境使用Sublime，Webstrom，HBuilder等工具进行开发</dd>
+							<dd>熟练使用PS进行切图及简单处理</dd>
+						</dl>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="page2 page" style="z-index: 6">
-			开发中
+			<div class="left">
+				<img src="img/avic.jpg" style="width: 100%;">
+				<h2>中航工业青云</h2>
+				<p>4年/室主任/生产部</p>
+				<ol>
+					<li>1.进行大宗电子元器件物资的账务处理</li>
+					<li>2.形成发放调拨计划</li>
+					<li>3.协调员工与其他部门的工作困难</li>
+					<li>4.协助部门领导制定制度及管理办法</li>
+					<li>5.收集并分析数据准备会议材料，与会后形成会议纪要</li>
+					<li>6.进行科室内员工上岗培训</li>
+				</ol>
+			</div>
+			<div class="right">
+				<ul class="avic">
+					<li>
+						<p>2016年死呆物资盘活</p>
+						<dl>
+							<dd>责任描述：实施负责人</dd>
+							<dd>内容描述：由于技术改型，预生产产品停产，等各类原因造成大量死呆物资闲置，占用资金3.28亿元，将其中典型案例逐项梳理分析形成报告以避免再次出现同类问题；筛选可用物资提交至中航系统内部物资交换平台，缩小实际损失。</dd>
+						</dl>
+					</li>
+					<li>
+						<p>2015年公司搬迁</p>
+						<dl>
+							<dd>责任描述：总计划，现场总指挥；撰写搬迁方案、搬迁过程中的应急预案、招标文件等文案。</dd>
+							<dd>内容描述：2015 年根据国家相关条例，所在单位由中关村园区搬迁至顺义工业园、窦店工业园实现两园三地规划。其中涉及大量涉密文件、危化物资、大型设备等。根据搬家公司工人、设备资源，安排各部门搬迁顺序，及协调处理搬迁过程中出现的各种问题。</dd>
+						</dl>
+					</li>
+					<li>
+						<p>2014年SOP文件制定</p>
+						<dl>
+							<dd>责任描述：主笔部门内部 SOP 文件 </dd>
+							<dd>内容描述：部门成立于 2012 年，由于各种问题一直粗略的执行 6S 各项要求，2014 年为规范日常作业及方便新员工上岗培训特制定本 SOP 文件。 </dd>
+						</dl>
+					</li>
+					<li>
+						<p>2012年物资配套缺项跟踪</p>
+						<dl>
+							<dd>责任描述：整合分析物资收发情况，以会议的形式进行简报，并协调处理各部门中存在问题。 </dd>
+							<dd>内容描述：处理由于沟通不及时、技术资料限制的原因产生的物资收发不及时问题。在进行专项处理前 2011 年年度计划执行完成 38%，项目执行后 2012 年年度计划
+							完成 82%；于 2013 年形成缺项管理 sop 文件，固化该项目为日常作业。
+							</dd>
+						</dl>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<div class="page3 page" style="z-index: 6">
 			开发中
