--- a/index.html
+++ b/index.html
@@ -8,22 +8,11 @@
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
-	<style>
-	.wrap {
-	    margin-left: -550px;
-	    left: 50%;
-	    top: 103px;
-	    position: absolute;
-	    width: 1100px;
-	    height: 599px;
-	    opacity: 1;
-    }
-	</style>
 </head>
 <body>
 	<div class="bg"></div>
 	<h1>段骁桐,1326,前端</h1>
-	<!-- <div class="anima">
+	<div class="anima">
 		<div class="bagbody">
 			<div class="baghead">
 				<div class="top"></div>
@@ -37,9 +26,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="wrap overflow"> -->
-	<div class="wrap">
-		<div class="page0 page" style="z-index: 6">
+	<div class="wrap overflow">
+		<div class="page0 page" style="z-index: 9">
 			<div class="left">
 				<div class="border">
 					<div class="box" id="bb">
@@ -51,7 +39,7 @@
 					<p>
 						段骁桐/1991.12/北京;惯用绰号1326。至今未放弃读万卷书，行万里路的梦想。也曾想尽尝360行，体验不一样的百态，奈何“吾生也有涯，而知也无涯。以有涯随无涯，殆已！”。故扎根前端，化为1年开发经验的前端coder,努力向engineer靠拢中。
 					</p>
-					<p>爱好：看书、<a href="javascript:liketoggle()">玩(不是只有游戏叫玩)=></a></p>
+					<p>爱好：阅读、骑行、旅行、器乐、桌游</p>
 				</div>
 			</div>
 			<div class="right">
@@ -65,7 +53,7 @@
 						<li><p><i>2014</i>首都师范大学、成本、汉语言文学、最佳勤奋奖</p></li>
 						<li><p><i>2016</i>HPE、前端工程师、英雄团队</p></li>
 					</ul>
-				
+					<img src="img/honor.png" alt="">
 				</div>
 			</div>			
 		</div>
@@ -188,100 +176,99 @@
 				</ul>
 			</div>
 		</div>
-		<div class="page3 page" style="z-index: 9">
-			<dl class="table">
-				<dt>姓名</dt>
-				<dd>段骁桐</dd>
-				<dt>年龄</dt>
-				<dd>26</dd>
-				<dd class="br"><img src="img/me1.jpg" alt=""></dd>
-				<dt>出生日期</dt>
-				<dd>1991-12-27</dd>
-				<dt>居住地</dt>
-				<dd>北京</dd>
-				<dd class="bn br"></dd>
-				<dt>学历</dt>
-				<dd>本科</dd>
-				<dt>毕业院校</dt>
-				<dd>首都师范大学</dd>
-				<dd class="bn br"></dd>
-				<dt>求职意向</dt>
-				<dd>前端开发>>产品助理</dd>
-				<dt>工作经验</dt>
-				<dd>5年/前端开发1年</dd>
-				<dd class="bn br"></dd>
-				<dt>目前状态</dt>
-				<dd>已离职</dd>
-				<dt>期望薪资</dt>
-				<dd>8k</dd>
-				<dd class="bn br"></dd>
-				<dt>联系电话</dt>
-				<dd>15810669240</dd>
-				<dt>邮箱</dt>
-				<dd class="br" style="width: 334px;">q568086499@163.com</dd>
-				<dt style="height: 211px;line-height: 211px;">专业技能</dt>
-				<dd class="br" style="width: 668px;height: 211px">
-					<ul>
-						<li>1、熟练使用PS进行设计稿切图及图片优化等简单处理;</li>
-						<li>2、精通Html5、CSS3、Javascript、json、jsonp、ajax等技术;</li>
-						<li>3、能熟练运用DIV+CSS来制作符合W3C规范的静态页面，确保浏览器及平台的性能和兼容性;</li>
-						<li>4、熟悉主流js框架如jQuery、vue等，了解基于node的工程化工具webpack;</li>
-						<li>5、熟练使用git、svn版本控制;</li>
-						<li>6、有大型WEB系统开发经验，有移动端html5研发经验，熟悉混合开发模式;</li>
-						<li>7、可使用开发者工具定位bug、使用过百度地图API、微信小程序等.</li>
-					</ul>
-				</dd>
-				<dt style="height: 700px;line-height: 700px;">工作经历</dt>
-				<dd class="br" style="width: 668px;height: 700px;">
-					<ul>
-						<li><b>2016 – 至今    HPE | 国航项目组 | 前端开发</b></li>
-						<li>国航积分兑换平台http://ffp.airchina.com.cn</li>
-						<li><b>项目描述：</b>国航积分兑换平台，机票线实现机票购买、兑换、查询；商城线完成pc及移动端的现金+里程支付模式；服务线达成服务电子化里程补登、转增、国际化、callcenter;</li>
-						<li><b>前端技术栈：</b>本项目使用bootstrap/mui+handlebar+ejs+webpack+git/svn进行开发; </li>
-						<li><b>主要职责：</b></li>
-						<li>负责pc端商城首页、购物车逻辑、服务电子化条线、三方服务等，wep端负责商城的交互部分。对可复用部分提成插件（如需要可出视）</li>
-						<li>1.结合需求文档及设计稿高效开发demo； </li>
-						<li>2.解决ie兼容性bug； </li>
-						<li>3.前后端分离方式开发进行数据的展示与交互； </li>
-						<li>4.优化代码，增加可维护性及可读性，缩小页面大小，提示网站速度； </li>
-						<li>5.构建页面各类视觉效果，需前台进行的数据处理，可复用功能封装成插件；</li>
-						<li>6.制作webapp核心模块设计、开发； </li>
-						<li>*期间积累了大量大型网站开发经验，踩了不少坑，所处团队被惠普（国际）评为英雄团队。
-						</li>
-					</ul>
-					<br>
-					<ul>
-						<li><b>2012-2016 中航工业青云|生产部|室主任</b></li>
-						<li>1.进行大宗电子元器件物资的账务处理</li>
-						<li>2.形成发放调拨计划</li>
-						<li>3.协调员工与其他部门的工作困难</li>
-						<li>4.协助部门领导制定制度及管理办法</li>
-						<li>5.收集并分析数据准备会议材料，与会后形成会议纪要</li>
-						<li>6.进行科室内员工上岗培训</li>
-					</ul>
-				</dd>
-				<dt style="line-height: 61px;height: 61px;">教育经历</dt>
-				<dd class="br" style="width: 668px;height: 61px;">
-					<ul>
-						<li>2014-2017|首都师范大学|汉语言文学|成教本科</li>
-						<li>2010-2013|北京理工大学|应用电子技术|统招专科</li>
-					</ul>
-				</dd>
-				<dt class="bd" style="line-height: 91px;height: 91px;">培训经历</dt>
-				<dd class="br bd" style="width: 668px;height: 91px;">
-					<ul>
-						<li>2013年：公司对各部门精英集中开展“行为领导力”培训；</li>
-						<li>2014年：基层管理者进行为期一年的“基层管理”培训；</li>
-						<li>2015年：中层干部及业务骨干进修”IPMP”;因工作需要进修web前端相关知识.</li>
-					</ul>
-				</dd>
-			</dl>
+		<div class="page3 page" style="z-index: 6">
+			<div class="tablebox">
+				<dl class="table">
+					<dt>姓名</dt>
+					<dd>段骁桐</dd>
+					<dt>年龄</dt>
+					<dd>26</dd>
+					<dd class="br"><img src="img/me1.jpg" alt=""></dd>
+					<dt>出生日期</dt>
+					<dd>1991-12-27</dd>
+					<dt>居住地</dt>
+					<dd>北京</dd>
+					<dd class="bn br"></dd>
+					<dt>学历</dt>
+					<dd>本科</dd>
+					<dt>毕业院校</dt>
+					<dd>首都师范大学</dd>
+					<dd class="bn br"></dd>
+					<dt>求职意向</dt>
+					<dd>前端开发>>产品助理</dd>
+					<dt>工作经验</dt>
+					<dd>5年/前端开发1年</dd>
+					<dd class="bn br"></dd>
+					<dt>目前状态</dt>
+					<dd>已离职</dd>
+					<dt>期望薪资</dt>
+					<dd>8k</dd>
+					<dd class="bn br"></dd>
+					<dt>联系电话</dt>
+					<dd>15810669240</dd>
+					<dt>邮箱</dt>
+					<dd class="br" style="width: 334px;">q568086499@163.com</dd>
+					<dt style="height: 211px;line-height: 211px;">专业技能</dt>
+					<dd class="br" style="width: 668px;height: 211px">
+						<ul>
+							<li>1、熟练使用PS进行设计稿切图及图片优化等简单处理;</li>
+							<li>2、精通Html5、CSS3、Javascript、json、jsonp、ajax等技术;</li>
+							<li>3、能熟练运用DIV+CSS来制作符合W3C规范的静态页面，确保浏览器及平台的性能和兼容性;</li>
+							<li>4、熟悉主流js框架如jQuery、vue等，了解基于node的工程化工具webpack;</li>
+							<li>5、熟练使用git、svn版本控制;</li>
+							<li>6、有大型WEB系统开发经验，有移动端html5研发经验，熟悉混合开发模式;</li>
+							<li>7、可使用开发者工具定位bug、使用过百度地图API、微信小程序等.</li>
+						</ul>
+					</dd>
+					<dt style="height: 635px;line-height: 635px;">工作经历</dt>
+					<dd class="br" style="width: 668px;height: 635px;">
+						<ul>
+							<li><b>2016 – 至今    HPE | 国航项目组 | 前端开发</b></li>
+							<li>国航积分兑换平台http://ffp.airchina.com.cn</li>
+							<li><b>项目描述：</b>国航积分兑换平台，机票线实现机票购买、兑换、查询；商城线完成pc及移动端的现金+里程支付模式；服务线达成服务电子化里程补登、转增、国际化、callcenter;</li>
+							<li><b>前端技术栈：</b>本项目使用bootstrap/mui+handlebar+ejs+webpack+git/svn进行开发; </li>
+							<li><b>主要职责：</b></li>
+							<li>负责pc端商城首页、购物车逻辑、服务电子化条线、三方服务等，wep端负责商城的交互部分。对可复用部分提成插件（如需要可出视）</li>
+							<li>1.结合需求文档及设计稿高效开发demo； </li>
+							<li>2.解决ie兼容性bug； </li>
+							<li>3.前后端分离方式开发进行数据的展示与交互； </li>
+							<li>4.优化代码，增加可维护性及可读性，缩小页面大小，提示网站速度； </li>
+							<li>5.构建页面各类视觉效果，需前台进行的数据处理，可复用功能封装成插件；</li>
+							<li>6.制作webapp核心模块设计、开发； </li>
+							<li>*期间积累了大量大型网站开发经验，踩了不少坑，所处团队被惠普（国际）评为英雄团队。
+							</li>
+						</ul>
+						<ul>
+							<li><b>2012-2016 中航工业青云|生产部|室主任</b></li>
+							<li>1.进行大宗电子元器件物资的账务处理</li>
+							<li>2.形成发放调拨计划</li>
+							<li>3.进行科室内员工上岗培训,协调员工与其他部门的工作困难</li>
+							<li>4.协助部门领导制定制度及管理办法</li>
+							<li>5.收集并分析数据准备会议材料，与会后形成会议纪要</li>
+						</ul>
+					</dd>
+					<dt style="line-height: 61px;height: 61px;">教育经历</dt>
+					<dd class="br" style="width: 668px;height: 61px;">
+						<ul>
+							<li>2014-2017|首都师范大学|汉语言文学|成教本科</li>
+							<li>2010-2013|北京理工大学|应用电子技术|统招专科</li>
+						</ul>
+					</dd>
+					<dt class="bd" style="line-height: 91px;height: 91px;">培训经历</dt>
+					<dd class="br bd" style="width: 668px;height: 91px;">
+						<ul>
+							<li>2013年：公司对各部门精英集中开展“行为领导力”培训；</li>
+							<li>2014年：基层管理者进行为期一年的“基层管理”培训；</li>
+							<li>2015年：中层干部及业务骨干进修”IPMP”;因工作需要进修web前端相关知识.</li>
+						</ul>
+					</dd>
+				</dl>
+			</div>
 			<ul class="btnbox">
 				<li class="baidu">分享</li>
-				<li>下载</li>
+				<li id="pdfbtn">下载</li>
 			</ul>
 			<div class="bdsharebuttonbox" style="display: none">
-				<a href="#" class="bds_more" data-cmd="more"></a>
 				<a href="#" class="bds_mail" data-cmd="mail" title="分享到邮件分享"></a>
 				<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
 				<a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a>
@@ -310,5 +297,8 @@
 		};
 		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
 	</script>
+	<script type="text/javascript" src="js/html2canvas.js"></script>
+    <script type="text/javascript" src="js/jsPdf.debug.js"></script>
+    <script type="text/javascript" src="js/htmltopdf.js"></script>
 </body>
 </html>
