--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="left">
 				<div class="border">
 					<div class="box" id="bb">
-						<canvas id="cas" width="18rem" height="18rem"></canvas>
+						<canvas id="cas"></canvas>
 					</div>
 				</div>
 				<div class="info">
