--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 			"bdText":"前端段骁桐","bdMini":"2","bdMiniList":["tsina","bdysc","weixin","tqq","sqq","mail","copy","print"],"bdPic":"","bdStyle":"1","bdSize":"24"},
 			"share":{}
 		};
-		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+		with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='./static/api/js/share.js?v=89860593.js?'];
 	</script>
 	<script type="text/javascript" src="js/html2canvas.js"></script>
     <script type="text/javascript" src="js/jsPdf.debug.js"></script>
