--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="stylesheet" href="css/reset.css">
+	<script>
+		if(navigator.userAgent.indexOf("Chrome")==-1){
+			alert("为了最好的浏览效果请选用chrome浏览器预览");
+		}
+	</script>
 </head>
 <body>
 	<div class="bg"></div>
